--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -40,10 +40,12 @@
     font-size: 16px;
     font-weight: bold;
     transition: color 0.3s ease-in-out;
+    padding: 12px;
 }
 
-.nav-menu li a:hover, a:focus {
-    color: #008080;
+.nav-menu li a:hover, a:visited {
+    background-color: #86c6c6;
+    border-radius: 10px;
 }
 
 /* 우측 버튼 영역 */
